--- a/plugin.xml
+++ b/plugin.xml
@@ -6,8 +6,9 @@
 
   <name>AppInfo Plugin</name>
   <description>
-    Makes the app version number (android:versionName on Android, CFBundleVersion on iOS, and WMAppManifest.xml App Version on WP8) 
-    accessible through a new method navigator.appinfo.getVersion().
+    Provide the ability to assess to Application informations.
+    accessible through navigator.appinfo.getAppInfo().
+    currently 'identifier', 'version', 'build' is provided as one JSON result by callback.
   </description>
   <license>MIT</license>
 
